prometheus-kustomize/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    run: prometheus
spec:
  ports:
    - name: prometheus
      port: 80
      targetPort: 9090
  type: LoadBalancer
  selector:
    run: prometheus
